# rest_call_wasm

./: Cargo.toml
src/: lib.rs
