[package]
name = "rest_call_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
futures = "0.3"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "Headers"
]

[lib]
crate-type = ["cdylib", "rlib"]

